--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>Oreros De Tierra Caliente</title>
-  <base href="./">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Compre y venda joyas de oro u otros metales aqui 😁👍. Encuentre miles de marcas 
     y productos a precios increíbles." data-head-react="true">
@@ -18,6 +18,6 @@
   <app-root></app-root>
   <script src="https://js.stripe.com/v3/"></script>
   <script src="https://kit.fontawesome.com/30bb6915e6.js" crossorigin="anonymous"></script>
-<script src="runtime.2ae7c10c4b582e40204a.js" defer></script><script src="polyfills.424aa296bc3e04e0c0eb.js" defer></script><script src="scripts.9a26279fb7990ab20629.js" defer></script><script src="main.edc1041495171e7bed34.js" defer></script>
+<script src="runtime.100af60e6e41dcda0f6b.js" defer></script><script src="polyfills.424aa296bc3e04e0c0eb.js" defer></script><script src="scripts.9a26279fb7990ab20629.js" defer></script><script src="main.8d950a97e5cf097bedb7.js" defer></script>
 
 </body></html>
